@@ -44,12 +44,6 @@
             <scope>test</scope>
         </dependency>
         <dependency>
-            <groupId>org.testfx</groupId>
-            <artifactId>openjfx-monocle</artifactId>
-            <version>jdk-12.0.1+2</version> <!-- jdk-11+26 for Java 11, jdk-9+181 for Java 9, 8u76-b04 for Java 8 -->
-            <scope>test</scope>
-        </dependency>
-        <dependency>
             <groupId>org.hamcrest</groupId>
             <artifactId>hamcrest</artifactId>
             <version>2.1</version>
@@ -65,6 +59,18 @@
             <groupId>org.openjfx</groupId>
             <artifactId>javafx-fxml</artifactId>
             <version>15-ea+1</version>
+        </dependency>
+        <dependency>
+            <groupId>org.testfx</groupId>
+            <artifactId>openjfx-monocle</artifactId>
+            <version>jdk-12.0.1+2</version> <!-- jdk-11+26 for Java 11, jdk-9+181 for Java 9, 8u76-b04 for Java 8 -->
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.testfx</groupId>
+            <artifactId>openjfx-monocle</artifactId>
+            <version>jdk-12.0.1+2</version> <!-- jdk-11+26 for Java 11, jdk-9+181 for Java 9, 8u76-b04 for Java 8 -->
+            <scope>test</scope>
         </dependency>
     </dependencies>
     <build>
@@ -113,15 +119,6 @@
                     <version>2.22.0</version>
                     <configuration>
                         <argLine>${argLine}</argLine>
-                        <systemPropertyVariables>
-                            <glass.platform>Monocle</glass.platform>
-                            <monocle.platform>Headless</monocle.platform>
-                            <prism.order>d3d</prism.order>
-                        </systemPropertyVariables>
-                        <argLine>
-                            --add-exports javafx.graphics/com.sun.javafx.application=ALL-UNNAMED
-                            --add-exports javafx.graphics/com.sun.glass.ui=ALL-UNNAMED
-                        </argLine>
                     </configuration>
                 </plugin>
                 <plugin>
@@ -157,6 +154,7 @@
                         </options>
                     </configuration>
                 </plugin>
+
 
             </plugins>
         </pluginManagement>
